added loading state

--- a/books.html
+++ b/books.html
@@ -59,8 +59,8 @@
               <option value="RATING">Rating</option>
             </select>
           </div>
-         <div class="books">
-
+         <div class="books books__loading">
+          <i class="fa-solid fa-spinner books__loading--spinner"></i>
          </div>
           </div>
         </div>
